2021-08-26  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (check_attr): small improvement in the verbose output of SSL Labs

2021-08-25  Matteo Corti  <matteo@corti.li>

	* README.md: Info about quoting *

2021-08-19  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (parse_command_line_options): do not delete COMMON_NAME by --file

2021-08-18  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (parse_command_line_options): Fixed the debugging output by the command line arguments splitting

2021-08-16  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (main): Support DANE TLSA 312

2021-08-13  Matteo Corti  <matteo@corti.li>

	* test/unit_tests.sh (testMultipleAltNamesOK): Added a test for multiple --cn and OK status
	* check_ssl_cert (parse_command_line_options): Fixed the -n option (the old value was ovewritten each time)
	* check_ssl_cert (main): Better validation of the host command line argument

2021-07-09  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: performance data is no more shown by critical and warning message when --no-perf is specified

2021-06-22  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: removes the file name from file(1) output

2021-06-18  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (check_attr): stop the SSL Labs checks after an error

2021-06-16  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (check_attr): show the progress in % by SSL labs
	* check_ssl_cert (check_attr): removing unnecessary port probing with nmap

2021-05-31  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (check_cert_end_date): Display since how many days the certificate was valid

2021-05-28  Igor Mironov  <mcs6502-sek@yahoo.com.au>

	* check_ssl_cert: compatibility fixes for LibreSSL 2.8.3 on macOS Catalina

2021-05-21  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: added the --debug-file option
	* check_ssl_cert(check_ocsp): append .crt to the debug certificates
	* check_ssl_cert: sanity checks for file write operations
