@@ -1,3 +1,7 @@
+2021-08-27  Matteo Corti  <matteo@corti.li>
+
+	* check_ssl_cert (check_attr): skipping the CN check on IP addresses
+
 2021-08-26  Matteo Corti  <matteo@corti.li>
 
 	* check_ssl_cert (check_attr): small improvement in the verbose output of SSL Labs
